<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SearchFragment"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PickMovie"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_marginTop="50dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PickMovie2"
        android:textColor="@color/black"
        android:textSize="35sp">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Recommendation1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_design7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Recommendation1"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Recommendation2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/background_design7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation1"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation2"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>