<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/SelectGenre"
    android:orientation="vertical"
    android:background="@drawable/background_design3"
    tools:context=".EditYear">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/EditGenreOrYear"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_design6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:padding="2dp"
                android:text="@string/PreferenceSetting_Year"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="From : "
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EditPreferenceMovie_YearMin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:inputType="number"
                    android:hint="@string/MovieRange"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="To : "
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/EditPreferenceMovie_YearMax"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:inputType="number"
                    android:hint="@string/MovieRange"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/UpdateYearBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Update">
                </Button>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>