<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@drawable/background_design3"
    tools:context=".Recommendation1">

    <androidx.cardview.widget.CardView
        android:id="@+id/Recommendation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/background_design7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Select1"
                android:textColor="@color/black"
                android:textSize="25sp">
            </TextView>

            <Spinner
                android:id="@+id/MovieGenreSpinner1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/MovieGenreSpinner2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/MovieGenreSpinner3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Select2"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:textSize="25sp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="From : "
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EnterPreferenceMovie_YearMin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:inputType="number"
                    android:hint="@string/MovieRange"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="To : "
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/EnterPreferenceMovie_YearMax"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:inputType="number"
                    android:hint="@string/MovieRange"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/MakeRecommendation1Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Submit">
            </Button>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>